--- a/StudentManagement/Views/Student/Index.cshtml
+++ b/StudentManagement/Views/Student/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<StudentManagement.Models.Student>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Student Management System";
 }
 
-<h2>Index</h2>
+<h2>Student Management</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
